acomodo de template con datos del documento de especificacion

--- a/Documento/agradecimientos.tex
+++ b/Documento/agradecimientos.tex
@@ -1,9 +1,8 @@
 \chapter*{Agradecimientos}
 \thispagestyle{empty}
 
-El camino recorrido a lo largo de estos años, y el resultado de este trabajo, se lo debo a todas esas personas que han caminado junto a mí en las aulas, en el escenario, en el interminable aprendizaje de la vida.
-
-Hoy, ansioso por seguir avanzando junto a ustedes,
+Los agradecimientos son una extensión de la dedicatoria. En ella se 
+puede incluir a un mayor número de personas.
 
 \vspace*{1cm}
 
