--- a/Documento/anexos.tex
+++ b/Documento/anexos.tex
@@ -1,4 +1,12 @@
 \chapter*{Anexos}
 \thispagestyle{empty}
 
+Esta sección es opcional. Si se decide ponerla en el documento se deben 
+incluir en ella materiales generados o utilizados por el investigador pero 
+que, para efectos de facilitar la lectura, se incluyen al margen del 
+informe. Deberán ser aludidos en el cuerpo del trabajo. Estos 
+materiales pueden ser documentos, instructivos, instrumentos de encuestas, programas, algoritmos, etc., que se adosarán al final del 
+trabajo.
+
+
 \cleardoublepage
