--- a/Documento/dedicatoria.tex
+++ b/Documento/dedicatoria.tex
@@ -1,2 +1,6 @@
 \vspace*{0.4\textheight}
-{\hfill{\Large{\emph{a mis queridos padres}}}}
+{\hfill{\Large{\emph{a alguien}}}}
+
+Esta sección es opcional y deberá escribirse en una página separada. El 
+estudiante puede dedicar su Proyecto de Graduación a alguna persona o 
+grupo de personas.
